--- a/dtc_server/requirements.txt
+++ b/dtc_server/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.7
+autopep8==1.5.3
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.7
@@ -6,7 +7,11 @@ django-cors-headers==3.3.0
 django-webpack-loader==0.7.0
 djangorestframework==3.11.0
 gunicorn==20.0.4
+numpy==1.18.5
+opencv-python==4.2.0.34
+pycodestyle==2.6.0
 pytz==2020.1
 sqlparse==0.3.1
 static3==0.7.0
+toml==0.10.1
 whitenoise==5.1.0
